# ptcl-rs

./: AGENTS.md  Cargo.toml  README.md
benches/: sim_bench.rs
docs/: README.md
docs/benchmarks/: 2026-03-02-baseline.md  2026-03-02-ecs-baseline-before-packed-rewrite.md  2026-03-02-experiment-01-compaction-vs-swap-remove.md  2026-03-02-experiment-02-ballistic-soa.md  2026-03-02-experiment-03-branch-minimization.md  2026-03-02-experiment-04-thresholded-parallel-step.md  2026-03-02-experiment-05-linear-pair-simd.md  2026-03-02-experiment-06-spline-bezier-precompute.md  2026-03-02-lane-split-results.md  2026-03-02-lane-split-spawn-specialized-results.md  2026-03-02-optimization-pass-1.md  2026-03-02-packed-rewrite-results.md  2026-03-02-profiling-callgrind-step.md  README.md  optimization-experiment-log.md
docs/plans/: 001-library-demo-separation.md  002-performance-and-benchmarks.md  003-cpu-optimization-experiments.md
docs/tutorials/: 001-bitflags-and-branch-prediction.md
src/: demo_particles.rs  demo_scene.rs  main.rs  particle_system.rs  particles.rs  sketch.rs
src/core/: mod.rs  particle_model.rs  particle_system.rs
src/particle_effects/: dynamic_particle.rs  mod.rs  particle_effect.rs  spline_particle.rs  static_particle.rs  ultra_dynamic_particle.rs
