[package]
name = "ptcl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.32.0"
rand = "0.9.2"
raylib = "5.5.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "sim_bench"
harness = false
