[package]
name = "ptcl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
demo-raylib = ["dep:raylib"]

[dependencies]
glam = "0.32.0"
rand = "0.9.2"
raylib = { version = "5.5.1", optional = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "sim_bench"
harness = false

[[bin]]
name = "ptcl-rs"
path = "src/main.rs"
required-features = ["demo-raylib"]
